frontend/deploy/environments/dev/kustomize/ingress_admin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dinner-done-better-admin-webapp-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "dev"
    external-dns.alpha.kubernetes.io/hostname: "admin.dinnerdonebetter.dev"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dinner-done-better-admin-app-svc
                port:
                  number: 7000
---
